@startuml
skinparam classAttributeIconSize 0

class Application {
  +static getInstance()
  +getCompany()


}

class LegacySystemData {
 List<LegacySystemData> listLegacy
      List<Object> listSortAlgorithms
      List<Object> listSortOrder
      List<Object> listSortArrivalLeaving
-int snsUserNumber
   -String vaccineName
   -String dose
   -String lotNumber
   -Date scheduledDateTime
   -Date arrivalDateTime
   -Date nurseAdministrationTime
   -Date leavingDateTime

+sortByParameters(String sortChoice, String sortOrder,\n String sortArrivalLeaving, List listLegacyData)
+getLeavingList()
+getArrivalList()
+getListSorted(List list)
+toString()
+bubbleSortArrayList(List<LegacySystemData> list,\n Boolean ascending, int position)
}


class Company {
+getVaccinatedToFile()
+getUsersVaccineSchedule()

}

class LegacySystemData{

}

class LegacySystemDataReader{
+csvReaderLegacyData(String fileName)
+createLegacySystemData(String[] attributes)
}





class LegacySystemDataController {
-App oApp;
-Company oCompany

+newLegacySystemDataReader(String filePath)
+getListLegacySystemData()
+getSortAlgorithms()
+setSortAlgorithms()
+getSortOrder()
+setSortOrder()
+getSortArrivalLeaving()
+setSortArrivalLeaving()
+getLeavingList()
+sortByParameters(String sortChoice, String sortOrder,\n String sortArrivalLeaving, List listLegacyData)
}

class LegacySystemDataUI {

}


LegacySystemDataUI ..> LegacySystemDataController
LegacySystemDataController ..> Company
LegacySystemDataController ..> Application
Application ..> Company
Company "1"-->"*"LegacySystemData :has
LegacySystemDataController ..> LegacySystemData
LegacySystemDataController ..> LegacySystemDataReader
LegacySystemData "1"-->"1" LegacySystemDataReader : knows



@enduml